--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,7 @@
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.10.0",
+    "axios": "^0.27.2",
     "openai": "^5.7.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -20,7 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
