--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,18 +1,12 @@
 {
-  "version": 2,
   "builds": [
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "frontend/build"
-      }
+      "config": { "distDir": "build" }
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "frontend/build/index.html"
-    }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
