--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,12 +1,3 @@
 {
-  "builds": [
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "build" }
-    }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
-  ]
+  "build": { "env": { "REACT_APP_API_URL": "https://nasa-explorer-jamg.onrender.com" } }
 }
